# DataAgent

./: .dockerignore  .gitignore  Agent_0.ipynb  Agent_Object.ipynb  Agent_Object_Colab.ipynb  CMakeLists.txt  CONFIGURATION_VS_CODE_AND_RUNNING.md  Dockerfile  Dockerfile.runner  LangChainAgent.ipynb  README.md  agent_api.py  cpp_evaluator_call.py  csv_evaluator.py  debug_agent_call.py  error.txt  evaluation.csv  evaluator.py  idea_plots.txt  options.txt  questions.txt  requirements-ml.txt  requirements.txt  steps_cmake.txt  table_comparison.py  utils_0.py
.cache/clangd/index/: main.cpp.DDCF9AA8815F27E0.idx  orchestrator.cpp.B0985A33CB27728B.idx
Agent/: Agent_Object.ipynb  __init__.py  data_agent.py  utils.py
SQL_dataset/: SQL_query_generation.py  query_dataset.json
codecarbon/: emissions.csv  emissions.csv_0.bak  emissions.csv_1.bak  emissions.csv_2.bak  emissions.csv_3.bak  emissions.csv_4.bak  emissions.csv_5.bak  emissions.csv_6.bak
config/: agent_config.yaml  agent_config_exp1_bestof_sweep.yaml  agent_config_exp1_bestof_sweep_docker_no_spice.yaml  agent_config_exp2_twostage_bestof1.yaml  agent_config_jmeter.yaml  agent_config_workflow.txt
cpp_evaluator/: CMakeLists.txt
cpp_evaluator/src/: main.cpp  orchestrator.cpp
evaluation/: Compare_python_cpp_evaluator.py  GT_generation.py  GT_generation_VIS.py  Generation.py  Generation_VIS.py  __init__.py  best_config_by_difficulty.json  build_best_config_by_difficulty.py  claude_dataset.json  colab_runnig.ipynb  config_tuner.py  contextual_tuner.py  difficulty_labels.py  final_dataset.json  gpt_columns_dataset.json  gpt_dataset.json  miguel.json  our_dataset.json  our_dataset_test.json  plots_report.ipynb  post_processing_output.py  prompt_config_router.py  read_csv_compare.py  scores_runs.csv  scores_summary.csv  sql_query.ipynb  stage_metrics_long.csv  stage_metrics_runs.csv  train_difficulty_classifier.py  vis_dataset.json
evaluation/csv_queries/: claude_0_gen.csv  claude_0_gt.csv  claude_10_gen.csv  claude_1_gen.csv  claude_1_gt.csv  claude_2_gen.csv  claude_2_gt.csv  claude_3_gen.csv  claude_4_gen.csv  claude_4_gt.csv  claude_5_gen.csv  claude_5_gt.csv  claude_6_gen.csv  claude_6_gt.csv  claude_7_gt.csv  claude_9_gt.csv  gpt_0_gen.csv  gpt_0_gt.csv  gpt_10_gen.csv  gpt_10_gt.csv  gpt_11_gen.csv  gpt_11_gt.csv  gpt_12_gt.csv  gpt_13_gen.csv  gpt_13_gt.csv  gpt_14_gen.csv  gpt_14_gt.csv  gpt_15_gt.csv  gpt_16_gen.csv  gpt_16_gt.csv  gpt_17_gt.csv  gpt_18_gen.csv  gpt_18_gt.csv  gpt_19_gen.csv  gpt_19_gt.csv  gpt_1_gen.csv  gpt_1_gt.csv  gpt_20_gt.csv  gpt_2_gen.csv  gpt_3_gt.csv  (+36 more)
evaluation/results/: best_of_n_improvement.csv  gptoss20-gpt_dataset.json  ious.csv  llama3-gpt_dataset.json  qwen3-gpt_dataset.json
jmx_files/: View Results Tree.jmx  agent_api_single_test.jmx
my_cpp/: CMakeLists.txt  Dockerfile
my_cpp/src/: agent_config_runner.cpp  agent_config_runner.hpp  agent_config_runner_config.cpp  agent_config_runner_jmeter.cpp  main.cpp  orchestrator.cpp  runner_common.cpp  runner_common.hpp  util.hpp
notebooks/: plots_report.ipynb  sql_query.ipynb
plots/: README.md  __init__.py  plot_experiment.py
results/: expected_analysis.txt  sales_november_2021.csv
tmp/: agent_gt_1768428362360347626_12.txt  agent_gt_1768434870969057040_16.txt  agent_gt_1768434870982790013_17.txt
